refactor: update artifact handling in playbooks and Dockerfile, removing Ansible git clone in favor of local copies

--- a/scenario/templates/Dockerfile.j2
+++ b/scenario/templates/Dockerfile.j2
@@ -8,7 +8,7 @@ RUN apt-get update \
         openssh-server iputils-ping telnet iproute2 sudo \
         git clang curl build-essential libelf-dev llvm \
         linux-tools-generic binutils-dev libcap-dev libclang-dev libssl-dev \
-        libdbus-1-dev pkg-config
+        libdbus-1-dev pkg-config rsync
 
 RUN apt-get install -y \
     libacl1-dev
